--- a/street_wise/street-wise/src/main.css
+++ b/street_wise/street-wise/src/main.css
@@ -196,14 +196,36 @@ body{
   background: #fff;
 }
 
+.input:hover {
+  border-color: var(--primary);
+}
+
 .input:focus{
-  border-color: #c7d2fe;
+  border-color: var(--primary);
+  border-radius: 12px;
   box-shadow: 0 0 0 4px rgba(59,130,246,.10);
+}
+
+.input--sm:focus {
+  box-shadow: none;
 }
 
 .input--sm{
   width: 120px;
   padding: 8px 10px;
+}
+
+.weightValue {
+  font-weight: 800;
+  color: var(--text);
+  font-size: 14px;
+  padding: 2px;
+}
+
+@media screen and (max-width: 1100px)  {
+  .slider {
+    width: 70%;
+  }
 }
 
 .btn{
@@ -224,4 +246,8 @@ body{
   background: var(--primary);
   border-color: var(--primary);
   color: #fff;
+}
+
+.btn--primary:hover {
+  background: #244c96;
 }
